# resume-shortlisting

./: README.md  main.py  pyproject.toml
app/: criteria_service.py  models.py  resume_service.py
testing-data/: jd.docx  response.csv  resume_2.docx
